# Avax-Binance_asset_notifier

./: Cargo.toml  LICENSE  README.md
src/: main.rs
