[package]
name = "aban"
version = "0.1.0"
authors = ["Remi Gastaldi <remi.gastaldi@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1.2.0", features = ["macros", "time"] }

futures = "0.3"
telegram-bot = "0.7"

tokio-binance = "1.0"
serde_json = "1.0.62"
chrono = "0.4"